--- a/templates/index.pug
+++ b/templates/index.pug
@@ -12,8 +12,9 @@ html(lang='en')
     meta(property='og:url' content='https://peepsgen.netlify.app')
     meta(property='og:type' content='app')
     link(rel='icon' href='/assets/site/icon.png')
-    link(rel='apple-touch-icon' href='/assets/site/apple_icon.png')s
+    link(rel='apple-touch-icon' href='/assets/site/apple_icon.png')
     link(rel='stylesheet' type='text/css' href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css")
+    link(rel='stylesheet' type='text/css' href="/assets/css/custom.css")
     link(rel='stylesheet' type='text/css' href="/assets/css/fa-all.css")
     title Peepsgen
   body.bg-blue
