fix broken og image url

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
     meta(property='og:title' content='Peepsgen: The openpeeps generator')
     meta(property='og:description' content='Generate SVG people from openpeeps resource')
     meta(name='Description' content='Generate SVG people from openpeeps resource')
-    meta(property='og:image' content='/assets/site/image.png')
+    meta(property='og:image' content='https://peepsgen.netlify.app/assets/site/image.png')
     meta(property='og:url' content='https://peepsgen.netlify.app')
     meta(property='og:type' content='app')
     link(rel='icon' href='/assets/site/icon.png')
