og type website

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -10,7 +10,7 @@ html(lang='en')
     meta(name='Description' content='Generate SVG people from openpeeps resource')
     meta(property='og:image' content='https://peepsgen.netlify.app/assets/site/image.png')
     meta(property='og:url' content='https://peepsgen.netlify.app')
-    meta(property='og:type' content='app')
+    meta(property='og:type' content='website')
     link(rel='icon' href='/assets/site/icon.png')
     link(rel='apple-touch-icon' href='/assets/site/apple_icon.png')
     link(rel='stylesheet' type='text/css' href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css")
